[workspace]
resolver = "2"
members = [
    "crates/sinowealth-isp",
    "crates/sinowealth-kb-tool",
]

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/carlossless/sinowealth-kb-tool"

[workspace.dependencies]
ihex = "3.0"
thiserror = "2.0"
log = { version = "0.4", features = ["max_level_debug"] }
phf = { version = "0.11", features = ["macros"] }

# Pure-Rust HID. On Linux the default is the hidraw backend; the `nusb`
# feature switches to the nusb-based backend (the hidapi `linux-static-libusb`
# equivalent).
[workspace.dependencies.hidra]
git = "https://github.com/carlossless/hidra"
