[package]
name = "sinowealth-isp"
description = """
Reusable async implementation of the Sinowealth 8051 HID ISP bootloader protocol, built on hidra and usable on native targets and the web (WebHID via wasm).
"""
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
# Switch hidra to its nusb-based USB backend instead of the per-OS native one.
nusb = ["hidra/nusb"]

[dependencies]
hidra.workspace = true
ihex.workspace = true
thiserror.workspace = true
log.workspace = true
phf.workspace = true

# The async page delays use a browser timer on the web; on native targets the
# delay is driven by a plain thread-backed timer with no extra dependencies.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }
