[package]
name = "sinowealth-isp"
description = """
Reusable async primitives for the Sinowealth 8051 HID ISP bootloader protocol, built on hidra and usable on native targets and the web (WebHID via wasm).
"""
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
# Switch hidra to its nusb-based USB backend instead of the per-OS native one.
nusb = ["hidra/nusb"]

[dependencies]
hidra.workspace = true
ihex.workspace = true
thiserror.workspace = true
phf.workspace = true
