[package]
name = "sinowealth-kb-tool"
description = """
A utility for reading and writing flash contents on Sinowealth 8051-based HID devices through the commonly found ISP bootloader
"""
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
# Use hidra's nusb-based USB backend on Linux instead of hidraw.
nusb = ["sinowealth-isp/nusb", "hidra/nusb"]

[dependencies]
sinowealth-isp = { path = "../sinowealth-isp" }
hidra.workspace = true
ihex.workspace = true
thiserror.workspace = true
log.workspace = true
phf.workspace = true

clap = "4.1"
clap-num = "1.0"
dialoguer = "0.11.0"
hidparser = "1.0.3"
indicatif = "0.17.11"
itertools = "0.14.0"
md5 = "0.7"

[dependencies.simple_logger]
version = "5.1"
default-features = false
features = ["stderr", "colors", "timestamps"]

[dev-dependencies]
assert_cmd = "2.0.17"
chrono = "0.4.41"
predicates = "3.1.3"
serial_test = "3.2.0"
stdext = "0.3.3"
